Fix: Not visible imagery names + input proportion (#8975)

--- a/css/80_app.css
+++ b/css/80_app.css
@@ -3195,6 +3195,7 @@ div.full-screen > button:focus {
 .layer-list li.best > div.best {
     padding: 5px;
     flex: 0 0 auto;
+    align-self: center;
 }
 
 .ideditor[dir='rtl'] .list-item-data-browse svg {
@@ -3226,9 +3227,11 @@ div.full-screen > button:focus {
 .layer-list label > span {
     display: block;
     overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    flex-grow: 1;
+    width: calc(100% - 20px); /* Ensures radio input width within flexbox */
+}
+
+.layer-list label span.localized-text {
+    line-height: 0.95rem;
 }
 
 .layer-list input.list-item-input {
